--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,8 +32,12 @@ dependencies:
   get_it: ^7.2.0
   flutter_bloc: ^7.0.0-nullsafety.6
   http: ^0.13.5
+  mockito: ^5.4.0
+  equatable: ^2.0.5
 
 dev_dependencies:
+  bloc_test: ^8.5.0
+  build_runner: ^2.3.3
   flutter_test:
     sdk: flutter
 
